fix get started button on small screen

--- a/src/IntroPage/IntroPage.css
+++ b/src/IntroPage/IntroPage.css
@@ -2,3 +2,12 @@
     /* border: 1px solid red; */
     padding: 30px;
 }
+
+.intro-form {
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+}
